<resources>
    <string name="app_name" translatable="false">Montir Presisi</string>
    <string name="terms_and_conditions_url" translatable="false">https://simsinfotekno.com/</string>
    <string name="this_app_version_is_only_supported_in_s_your_sim_card_region_is_s">This app version is only supported in %1$s, your SIM card region is %2$s</string>
    <string name="unsupported_region">Unsupported Region</string>
    <string name="continue_">Continue</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="loading">Loading</string>
    <string name="refresh">Refresh</string>
    <string name="issue">Issue</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="sign_in_to_access_all_features">Sign in to access all features and enjoy a seamless service experience.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="continue_please_make_sure">Continue? Please make sure the information you entered is correct.</string>
    <string name="an_email_with_a_password_reset_link">An email with a password reset link has been sent to your email address.</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="sign_in_successful">Sign in successful!</string>
    <string name="sign_up">Sign Up</string>
    <string name="just_one_more_step_to_go">Just one more step to go.</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_is_required">Full name is required</string>
    <string name="email_is_required">Email is required</string>
    <string name="invalid_email_format">Invalid email format!</string>
    <string name="password_is_required">Password is required</string>
    <string name="password_must_be_at_least_6_characters_long">Password must be at least 6 characters long!</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the <a href="https://simsinfotekno.com/">terms and conditions</a>.</string>
    <string name="terms_must_be_accepted">Terms must be accepted!</string>
    <string name="you_will_open_an_external_link">You will open an external link in your browser.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_successful">Sign up successful!</string>
    <string name="signed_in_as">Signed in as %1$s</string>
    <string name="authentication_failed">Authentication failed: %1$s</string>
    <string name="verification">Verification</string>
    <string name="please_verify_your_email">Please verify your email. Press the “Send” button, then click the verification link in the email we sent you.</string>
    <string name="verification_email_has_been_sent">Verification email has been sent.</string>
    <string name="failed_to_send_the_verification_email">Failed to send the verification email.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vehicle">Vehicle</string>
    <string name="vehicles">Vehicles</string>
    <string name="swift_and_precise_exchange_of_worn_or_damaged_vehicle_parts_with_high_quality_originals">Swift and precise exchange of worn or damaged vehicle parts with high-quality originals.</string>
    <string name="component_replacement">Component Replacement</string>
    <string name="plan_comprehensive_maintenance_ahead_of_time_ensuring_thorough_care_at_your_convenience">Plan comprehensive maintenance ahead of time, ensuring thorough care at your convenience.</string>
    <string name="scheduled_service">Scheduled Service</string>
    <string name="fast_on_the_spot_maintenance_and_diagnostics_to_get_your_vehicle_running_smoothly_in_no_time">Fast, on-the-spot maintenance and diagnostics to get your vehicle running smoothly in no time.</string>
    <string name="quick_service">Quick Service</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="name">Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="show_more">Show more</string>
    <string name="see_all">See all</string>
    <string name="select_the_issue">Select the issue your vehicle is experiencing from the list.</string>
    <string name="description">Description</string>
    <string name="provide_any_additional_details">Provide any additional details or observations about the issue.</string>
    <string name="location">Location</string>
    <string name="open_maps">Open Maps</string>
    <string name="enter_the_address_or_location">Enter the address or location where the service is needed.</string>
    <string name="check_this_box_to_consent_to_sharing_your_location">Check this box to consent to sharing your location with the service provider.</string>
    <string name="place_order">Place Order</string>
    <string name="date">Date</string>
    <string name="select_a_date_for_your_scheduled_service">Select a date for your scheduled service.</string>
    <string name="you_must_agree_to_share_your_location_before_placing_an_order">You must agree to share your location before placing an order.</string>
    <string name="select_a_vehicle_to_repair">Select a vehicle to repair.</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="please_select_a_location_and_enable_gps">Please select a location and enable GPS</string>
    <string name="select_a_location">Select a location</string>
    <string name="re_select_a_location">Re-select a location</string>
    <string name="address">Address</string>
    <string name="select_date">Select date</string>
    <string name="recurring">Recurring</string>
    <string name="you_cannot_select_today_or_yesterday">You cannot select today or yesterday!</string>
    <string name="order_placed_successfully">Order placed successfully</string>
    <string name="failed_to_place_order">Failed to place order</string>
    <string name="license_plate_number">License plate number</string>
    <string name="production_year">Production year</string>
    <string name="engine_capacity">Engine capacity</string>
    <string name="seat">Seat</string>
    <string name="power_output">Power output</string>
    <string name="type">Type</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="insert_vehicle">Insert Vehicle</string>
    <string name="power_source">Power Source</string>
    <string name="wheel_drive">Wheel Drive</string>
    <string name="transmission">Transmission</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_list">Vehicle List</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete</string>
    <string name="x_not_found">%1$s not found</string>
    <string name="unknown_error">Unknown error</string>
    <plurals name="x_items_selected">
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>
    <plurals name="deleted_x_items">
        <item quantity="one">Deleted %d item</item>
        <item quantity="other">Deleted %d items</item>
    </plurals>
    <string name="select_items">Select Items</string>
    <string name="delete_vehicles">Delete Vehicle(s)</string>
    <string name="delete_selected_vehicles_confirmation">Are you sure delete these vehicles?</string>
    <string name="history">History</string>
    <string name="vehicle_updated">Vehicle updated</string>
    <string name="x_is_invalid">%s is invalid</string>
    <string name="x_is_required">%s is required</string>
    <string name="invoice_number">Invoice number</string>
    <string name="payment_method">Payment Method</string>
    <string name="partner">Partner</string>
    <string name="partner_location">Partner Location</string>
    <string name="service_location">Service Location</string>
    <string name="orderItem">Order Item</string>
    <string name="total">Total</string>
    <string name="share">Share</string>
    <string name="invoice">Invoice</string>
    <string name="order_history">Order History</string>
    <string name="setting">Setting</string>
    <string name="service_process">Service Process</string>
    <string name="settings">Settings</string>
    <string name="coming_soon">Coming soon</string>
    <string name="general">General</string>
    <string name="other">Other</string>
    <string name="order_id">Order ID</string>
    <string name="x_x">%1$s %2$s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="notification">Notification</string>
    <string name="x_permission_is_not_granted">%s permission is not granted</string>
    <string name="this_permission_is_disabled">This permission is disabled. Please enable it in Setting app</string>
    <string name="go_to_settings">Go to Setting</string>
    <string name="x_permission_required">%s permission required</string>
    <string name="please_grant_permission">Please grant permission to run all features</string>
    <string name="okay">Okay</string>
    <string name="invoice_saved_to_gallery">Invoice saved to gallery</string>
    <string name="share_image">Share Image</string>
    <string name="make_sure_your_full_name_matches_your_national_id_card">Make sure your full name matches your national ID card.</string>
    <string name="done">Done</string>
    <string name="customer_order">Customer Order</string>
    <string name="nearest_partners">Nearest Partners</string>
    <string name="notification_title_order_placed">Order Placed</string>
    <string name="notification_text_order_placed">Waiting partner…</string>
    <string name="notification_title_accepted">Order Accepted</string>
    <string name="notification_text_accepted">The partner is preparing the service</string>
    <string name="notification_title_cancelled">Order Cancelled</string>
    <string name="notification_text_cancelled">Your service order has been cancelled</string>
    <string name="notification_title_on_the_way">On the way</string>
    <string name="notification_text_on_the_way">The partner is on the way</string>
    <string name="notification_title_repairing">Repairing</string>
    <string name="notification_text_repairing">Your vehicle is being repaired</string>
    <string name="notification_title_repaired">Repair Completed</string>
    <string name="notification_text_repaired">Look at your vehicle</string>
    <string name="notification_title_waiting_for_payment">Waiting For Payment</string>
    <string name="notification_text_waiting_for_payment">Don\'t forget to pay</string>
    <string name="notification_title_completed">Order Completed</string>
    <string name="notification_text_completed">Thank you for using our service!</string>
    <string name="order_status_order_placed">Order placed</string>
    <string name="order_status_processing">Processing</string>
    <string name="order_status_accepted">Accepted</string>
    <string name="order_status_on_the_way">On the way</string>
    <string name="order_status_in_progress">In progress</string>
    <string name="order_status_shipped">Shipped</string>
    <string name="order_status_repaired">Repaired</string>
    <string name="order_status_waiting_for_payment">Waiting for payment</string>
    <string name="order_status_on_hold">On hold</string>
    <string name="order_status_completed">Completed</string>
</resources>