<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activityMainDrawerMenuProfile"
            android:icon="@drawable/menu_24px"
            android:title="@string/profile" />
        <item
            android:id="@+id/activityMainDrawerMenuLogOut"
            android:icon="@drawable/menu_24px"
            android:title="@string/sign_out" />
        <item
            android:id="@+id/activityMainDrawerMenuSettings"
            android:icon="@drawable/menu_24px"
            android:title="@string/setting" />
        <item
            android:id="@+id/activityMainDrawerMenuOrder"
            android:icon="@drawable/menu_24px"
            android:title="@string/order_history" />
    </group>
</menu>